<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.baibhav.fireapp.LoginPage"
    android:background="@drawable/cryptvaultbackgroundlogin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_marginTop="50dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_to_cryptvault"
            android:id="@+id/et_logintext"
            android:textSize="30dp"
            android:textColor="@color/colorWhite"
            android:layout_gravity="center"
            />

        <EditText
            android:layout_marginTop="150dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_loginemail"
            android:hint="@string/enter_your_email_id"
            android:background="@drawable/rounded_corners"
            android:padding="7dp"
            android:textAlignment="center"

            />

        <EditText
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_loginpassword"
            android:hint="@string/enter_your_password"
            android:textAlignment="center"
            android:background="@drawable/rounded_corners"
            android:padding="7dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/login"
            android:layout_marginTop="20dp"
            android:id="@+id/btn_loginbtn"
            android:background="@drawable/rounded_buttons"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_your_password"
            android:textColor="@color/colorWhite"
            android:textSize="15dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_registered_yet"
            android:textColor="@color/colorWhite"
            android:textSize="15dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:id="@+id/tv_registerpage"
            android:linksClickable="true"
            />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
