<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.baibhav.fireapp.MainActivity"
    android:background="@drawable/cryptvaultbackground">

    <!--<Button-->
        <!--android:id="@+id/btn_sendData"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/add_value_to_firebase"-->
        <!--tools:layout_editor_absoluteX="99dp"-->
        <!--tools:layout_editor_absoluteY="72dp" />-->

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:orientation="vertical"

        android:padding="20dp"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="8dp">

        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="CryptVault"
            android:textColor="@color/colorWhite"
            android:textSize="40dp"
            android:layout_gravity="center"/>

        <EditText
            android:layout_marginTop="150dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_email_id"
            android:id="@+id/et_email"
            android:background="@drawable/rounded_corners"
            android:padding="7dp"/>

        <EditText
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_password"
            android:hint="@string/enter_password"
            android:background="@drawable/rounded_corners"
            android:padding="7dp"
            />

        <Button
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_register"
            android:text="@string/register"
            android:shadowColor="@color/colorPrimary"
            android:background="@drawable/rounded_buttons"


            />

        <TextView
            android:linksClickable="true"
            android:id="@+id/tv_signinpage"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_registered_click_here_to_login"
            android:textSize="15dp"
            android:textColor="@color/colorWhite"/>




    </LinearLayout>


</android.support.constraint.ConstraintLayout>
